@@ -1,41 +1,53 @@
 package pages;
 
-import elements.GoodsElement;
+import elements.GoodElement;
 import elements.ItemElement;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
-import org.openqa.selenium.support.ui.ExpectedConditions;
-import org.openqa.selenium.support.ui.WebDriverWait;
-import org.testng.Assert;
 
-import java.time.Duration;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
-public class GoodsPage extends BasePage {
+public class GoodsPage extends BasePage<GoodsPage> {
     private static final By GOODS_ELEMENTS = By.xpath("//*[@class='ugrid_i']");
     private static final By BASKET = By.xpath("//*[contains(@href, 'shopcart')]");
     private static final By BOOKMARKS = By.xpath("//*[contains(@href, 'bookmarks')]");
     private static final By DELETE = By.xpath("//*[text()='Удалить']");
     private static final By ITEMS = By.xpath("//*[contains(@class, 'mall-item __separator-basket __basket __flex')]");
 
+    private final static String URL = "https://ok.ru/mall/sections/main/cn/menu";
+
     public GoodsPage(WebDriver driver) {
         super(driver);
     }
 
     @Override
-    protected void check(WebDriver driver) {
-        assertion(BASKET, WAIT_TIME, "Ссылка на товары не загрузилась");
-        //TODO: проверить на загрузку всех элементов-товаров?
+    protected void load() {
+        driver.get(URL);
     }
 
-    public List<GoodsElement> getGoods() {
+    @Override
+    protected void isLoaded() throws Error {
+        check();
+    }
+
+    private void check() {
+        waitClickable(GOODS_ELEMENTS);
+        //waitClickable(ITEMS);
+    }
+
+    private List<GoodElement> getGoods() {
         List<WebElement> elements = driver.findElements(GOODS_ELEMENTS);
         if (!elements.isEmpty()) {
-            return elements.stream().map(goods -> new GoodsElement(driver, goods)).collect(Collectors.toList());
+            return elements.stream().map(goods -> new GoodElement(driver, goods).get()).toList();
         }
         return null;
+    }
+
+    public GoodElement getGoodElement(int number) {
+        return Objects.requireNonNull(getGoods()).get(number).get();
     }
 
     public List<ItemElement> getItems() {
@@ -46,23 +58,21 @@ public class GoodsPage extends BasePage {
         return null;
     }
 
-    //TODO: why T_T
     public GoodsPage openBasket() {
-//        WebElement wait = new WebDriverWait(driver, Duration.ofMinutes(WAIT_TIME)).until(ExpectedConditions.visibilityOfElementLocated(BASKET));
-        WebElement waiting = new WebDriverWait(driver, Duration.ofMinutes(WAIT_TIME)).until(ExpectedConditions.elementToBeClickable(BASKET));
-        WebElement element = driver.findElement(BASKET);
-        Assert.assertTrue(element.isDisplayed() && element.isEnabled());
-        element.click();
-        return this;
+        waitClickable(BASKET);
+        assertionDisplayed(BASKET, "Корзина недоступна");
+        click(BASKET);
+        return this.get();
     }
 
     public void openBookmarks() {
-        WebElement wait = new WebDriverWait(driver, Duration.ofMinutes(WAIT_TIME)).
-                until(ExpectedConditions.visibilityOfElementLocated(BOOKMARKS));
+        waitClickable(BOOKMARKS);
+        assertionDisplayed(BOOKMARKS, "Закладки в разделе корзины недоступны");
         click(BOOKMARKS);
     }
 
     public void deleteBookmark() {
+        waitClickable(DELETE);
         click(DELETE);
     }
 }
